--- a/Diabetes_PIDD.ipynb
+++ b/Diabetes_PIDD.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
     "from time import time\n",
     "from sklearn import metrics\n",
     "from sklearn.svm import SVC\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.model_selection import train_test_split"
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 49,
    "metadata": {
     "scrolled": true
    },
@@ -207,7 +207,7 @@
        "9                     0.232   54        1  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -228,184 +228,102 @@
        "768"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "x = df[['Pregnancies','Glucose','BloodPressure','SkinThickness','Insulin','BMI','DiabetesPedigreeFunction','Age']].values\n",
+    "x2 = x = df[['Pregnancies','Glucose','BloodPressure','SkinThickness','Insulin','BMI','DiabetesPedigreeFunction']].values\n",
     "y = df[['Outcome']].values\n",
     "len(x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scl = MinMaxScaler()\n",
+    "x = scl.fit_transform(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Pregnancies</th>\n",
-       "      <th>Glucose</th>\n",
-       "      <th>BloodPressure</th>\n",
-       "      <th>SkinThickness</th>\n",
-       "      <th>Insulin</th>\n",
-       "      <th>BMI</th>\n",
-       "      <th>DiabetesPedigreeFunction</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>Outcome</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>768.000000</td>\n",
-       "      <td>768.000000</td>\n",
-       "      <td>768.000000</td>\n",
-       "      <td>768.000000</td>\n",
-       "      <td>768.000000</td>\n",
-       "      <td>768.000000</td>\n",
-       "      <td>768.000000</td>\n",
-       "      <td>768.000000</td>\n",
-       "      <td>768.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>3.845052</td>\n",
-       "      <td>120.894531</td>\n",
-       "      <td>69.105469</td>\n",
-       "      <td>20.536458</td>\n",
-       "      <td>79.799479</td>\n",
-       "      <td>31.992578</td>\n",
-       "      <td>0.471876</td>\n",
-       "      <td>33.240885</td>\n",
-       "      <td>0.348958</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>3.369578</td>\n",
-       "      <td>31.972618</td>\n",
-       "      <td>19.355807</td>\n",
-       "      <td>15.952218</td>\n",
-       "      <td>115.244002</td>\n",
-       "      <td>7.884160</td>\n",
-       "      <td>0.331329</td>\n",
-       "      <td>11.760232</td>\n",
-       "      <td>0.476951</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.078000</td>\n",
-       "      <td>21.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>99.000000</td>\n",
-       "      <td>62.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>27.300000</td>\n",
-       "      <td>0.243750</td>\n",
-       "      <td>24.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>3.000000</td>\n",
-       "      <td>117.000000</td>\n",
-       "      <td>72.000000</td>\n",
-       "      <td>23.000000</td>\n",
-       "      <td>30.500000</td>\n",
-       "      <td>32.000000</td>\n",
-       "      <td>0.372500</td>\n",
-       "      <td>29.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>6.000000</td>\n",
-       "      <td>140.250000</td>\n",
-       "      <td>80.000000</td>\n",
-       "      <td>32.000000</td>\n",
-       "      <td>127.250000</td>\n",
-       "      <td>36.600000</td>\n",
-       "      <td>0.626250</td>\n",
-       "      <td>41.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>17.000000</td>\n",
-       "      <td>199.000000</td>\n",
-       "      <td>122.000000</td>\n",
-       "      <td>99.000000</td>\n",
-       "      <td>846.000000</td>\n",
-       "      <td>67.100000</td>\n",
-       "      <td>2.420000</td>\n",
-       "      <td>81.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       Pregnancies     Glucose  BloodPressure  SkinThickness     Insulin  \\\n",
-       "count   768.000000  768.000000     768.000000     768.000000  768.000000   \n",
-       "mean      3.845052  120.894531      69.105469      20.536458   79.799479   \n",
-       "std       3.369578   31.972618      19.355807      15.952218  115.244002   \n",
-       "min       0.000000    0.000000       0.000000       0.000000    0.000000   \n",
-       "25%       1.000000   99.000000      62.000000       0.000000    0.000000   \n",
-       "50%       3.000000  117.000000      72.000000      23.000000   30.500000   \n",
-       "75%       6.000000  140.250000      80.000000      32.000000  127.250000   \n",
-       "max      17.000000  199.000000     122.000000      99.000000  846.000000   \n",
-       "\n",
-       "              BMI  DiabetesPedigreeFunction         Age     Outcome  \n",
-       "count  768.000000                768.000000  768.000000  768.000000  \n",
-       "mean    31.992578                  0.471876   33.240885    0.348958  \n",
-       "std      7.884160                  0.331329   11.760232    0.476951  \n",
-       "min      0.000000                  0.078000   21.000000    0.000000  \n",
-       "25%     27.300000                  0.243750   24.000000    0.000000  \n",
-       "50%     32.000000                  0.372500   29.000000    0.000000  \n",
-       "75%     36.600000                  0.626250   41.000000    1.000000  \n",
-       "max     67.100000                  2.420000   81.000000    1.000000  "
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "614\n",
+      "154\n"
+     ]
     }
    ],
    "source": [
-    "df.describe()"
+    "x_train,x_test,y_train,y_test = train_test_split(x,y,test_size=0.2,random_state=42)\n",
+    "print(len(x_train))\n",
+    "print(len(x_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def metric(y,pred):\n",
+    "    avg = 'weighted'\n",
+    "    print('Precision score = ',metrics.precision_score(y, pred, average=avg))\n",
+    "    print('Recall score = ',metrics.recall_score(y, pred, average=avg))\n",
+    "    print('f1-score = ',metrics.f1_score(y, pred, average=avg))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Decision Tree Classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train DTC =  0.010892152786254883\n",
+      "[0 0 0 0 0 1 0 0 0 0 0 1 1 1 0 1 0 0 1 1 1 0 0 0 1 1 0 0 0 0 1 1 1 1 0 1 1\n",
+      " 0 0 1 0 0 1 1 0 1 1 1 0 1 0 1 1 0 0 0 1 0 1 1 0 0 0 1 0 1 0 1 0 1 1 0 0 0\n",
+      " 0 0 0 0 0 0 1 1 0 1 1 1 1 0 0 0 0 0 0 1 0 1 1 0 1 0 1 0 1 1 1 0 0 1 0 1 0\n",
+      " 1 0 1 1 1 1 1 0 0 0 0 0 0 0 0 0 1 1 1 1 1 0 0 1 0 0 1 0 0 0 0 0 0 0 0 1 0\n",
+      " 0 0 0 0 0 0]\n",
+      "Accuracy =  0.7532467532467533\n",
+      "Precision score =  0.763649049363335\n",
+      "Recall score =  0.7532467532467533\n",
+      "f1-score =  0.7564164648910411\n",
+      "DTC =  0.020450592041015625\n"
+     ]
+    }
+   ],
+   "source": [
+    "t = time()\n",
+    "clf = DecisionTreeClassifier(criterion='entropy')\n",
+    "clf.fit(x_train,y_train)\n",
+    "print('Train DTC = ',(time()-t))\n",
+    "pre = clf.predict(x_test)\n",
+    "print(pre)\n",
+    "print('Accuracy = ',clf.score(x_test,y_test))\n",
+    "\n",
+    "metric(y_test,pre)\n",
+    "print('DTC = ',(time()-t))"
    ]
   },
   {
