--- a/Diabetes_PIDD.ipynb
+++ b/Diabetes_PIDD.ipynb
@@ -2,16 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from time import time\n",
     "from sklearn import metrics\n",
     "from sklearn.svm import SVC\n",
-    "from sklearn.preprocessing import MinMaxScaler\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.model_selection import train_test_split"
@@ -19,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -207,7 +208,7 @@
        "9                     0.232   54        1  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -228,31 +229,30 @@
        "768"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x = df[['Pregnancies','Glucose','BloodPressure','SkinThickness','Insulin','BMI','DiabetesPedigreeFunction','Age']].values\n",
-    "x2 = x = df[['Pregnancies','Glucose','BloodPressure','SkinThickness','Insulin','BMI','DiabetesPedigreeFunction']].values\n",
+    "x = df[[\n",
+    "        'Pregnancies',\n",
+    "        'Glucose',\n",
+    "        'BloodPressure',\n",
+    "        'SkinThickness',\n",
+    "        'Insulin',\n",
+    "        'BMI',\n",
+    "        'DiabetesPedigreeFunction',\n",
+    "        'Age'\n",
+    "    ]].values\n",
+    "\n",
     "y = df[['Outcome']].values\n",
     "len(x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "scl = MinMaxScaler()\n",
-    "x = scl.fit_transform(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,38 +292,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train DTC =  0.010892152786254883\n",
-      "[0 0 0 0 0 1 0 0 0 0 0 1 1 1 0 1 0 0 1 1 1 0 0 0 1 1 0 0 0 0 1 1 1 1 0 1 1\n",
-      " 0 0 1 0 0 1 1 0 1 1 1 0 1 0 1 1 0 0 0 1 0 1 1 0 0 0 1 0 1 0 1 0 1 1 0 0 0\n",
-      " 0 0 0 0 0 0 1 1 0 1 1 1 1 0 0 0 0 0 0 1 0 1 1 0 1 0 1 0 1 1 1 0 0 1 0 1 0\n",
-      " 1 0 1 1 1 1 1 0 0 0 0 0 0 0 0 0 1 1 1 1 1 0 0 1 0 0 1 0 0 0 0 0 0 0 0 1 0\n",
-      " 0 0 0 0 0 0]\n",
-      "Accuracy =  0.7532467532467533\n",
-      "Precision score =  0.763649049363335\n",
-      "Recall score =  0.7532467532467533\n",
-      "f1-score =  0.7564164648910411\n",
-      "DTC =  0.020450592041015625\n"
+      "DecisionTreeClassifier(class_weight=None, criterion='entropy', max_depth=None,\n",
+      "            max_features=None, max_leaf_nodes=None,\n",
+      "            min_impurity_decrease=0.0, min_impurity_split=None,\n",
+      "            min_samples_leaf=1, min_samples_split=2,\n",
+      "            min_weight_fraction_leaf=0.0, presort=False, random_state=None,\n",
+      "            splitter='best')\n",
+      "Train Time DTC =  0.010314464569091797\n",
+      "[1 0 0 0 0 0 0 1 1 0 0 1 1 1 0 0 0 0 1 1 1 0 0 0 1 1 0 0 0 0 1 1 0 1 1 1 1\n",
+      " 1 0 1 0 0 1 1 0 1 1 0 0 1 0 1 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 1 0 1 1 0 0 0\n",
+      " 0 1 0 0 0 0 1 0 0 1 1 1 1 1 1 0 0 0 0 1 0 0 1 0 1 0 1 0 1 0 1 0 0 1 0 1 0\n",
+      " 1 0 1 0 1 1 0 0 1 0 0 0 0 0 1 1 0 1 1 1 0 0 0 1 1 0 1 1 0 0 0 0 0 0 0 0 0\n",
+      " 0 1 0 1 1 0]\n",
+      "Accuracy =  0.7337662337662337\n",
+      "Precision score =  0.7429623321979564\n",
+      "Recall score =  0.7337662337662337\n",
+      "f1-score =  0.7368518625063127\n",
+      "Time DTC =  0.021689414978027344\n"
      ]
     }
    ],
    "source": [
     "t = time()\n",
     "clf = DecisionTreeClassifier(criterion='entropy')\n",
+    "print(clf)\n",
     "clf.fit(x_train,y_train)\n",
-    "print('Train DTC = ',(time()-t))\n",
+    "print('Train Time DTC = ',(time()-t))\n",
     "pre = clf.predict(x_test)\n",
     "print(pre)\n",
     "print('Accuracy = ',clf.score(x_test,y_test))\n",
     "\n",
     "metric(y_test,pre)\n",
-    "print('DTC = ',(time()-t))"
+    "print('Time DTC = ',(time()-t))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# SVC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SVC(C=0.1, cache_size=200, class_weight=None, coef0=0.0,\n",
+      "  decision_function_shape='ovr', degree=3, gamma='auto', kernel='linear',\n",
+      "  max_iter=-1, probability=False, random_state=None, shrinking=True,\n",
+      "  tol=0.001, verbose=False)\n",
+      "Train Time SVC =  0.5498034954071045\n",
+      "[0 0 0 0 0 0 0 1 1 1 0 1 0 0 0 0 0 0 1 1 0 0 1 0 1 1 0 0 0 0 1 1 1 1 1 1 1\n",
+      " 0 1 1 0 1 1 0 0 1 1 0 0 1 0 1 1 0 0 0 1 0 0 1 1 0 0 0 0 1 0 1 0 1 1 0 0 0\n",
+      " 0 0 0 0 0 0 1 0 0 0 0 1 1 0 0 0 0 0 0 1 1 1 0 0 1 0 1 0 1 0 1 0 0 1 0 0 0\n",
+      " 0 0 1 0 0 1 0 0 1 0 0 0 0 0 0 0 1 1 1 1 1 0 0 1 0 0 1 1 0 0 0 0 0 0 0 0 0\n",
+      " 0 1 0 0 0 0]\n",
+      "Accuracy =  0.7532467532467533\n",
+      "Precision score =  0.7532467532467533\n",
+      "Recall score =  0.7532467532467533\n",
+      "f1-score =  0.7532467532467533\n",
+      "Time SVC =  0.5597586631774902\n"
+     ]
+    }
+   ],
+   "source": [
+    "t = time()\n",
+    "clf = SVC(kernel='linear',C=0.1)\n",
+    "print(clf)\n",
+    "clf.fit(x_train,y_train.ravel())\n",
+    "print('Train Time SVC = ',(time()-t))\n",
+    "pre = clf.predict(x_test)\n",
+    "print(pre)\n",
+    "print('Accuracy = ',clf.score(x_test,y_test))\n",
+    "\n",
+    "metric(y_test,pre)\n",
+    "print('Time SVC = ',(time()-t))"
    ]
   },
   {
