Added GaussianNB and KNeighborsClassifier

--- a/Diabetes_PIDD.ipynb
+++ b/Diabetes_PIDD.ipynb
@@ -13,6 +13,7 @@
     "from time import time\n",
     "from sklearn import metrics\n",
     "from sklearn.svm import SVC\n",
+    "from sklearn.naive_bayes import GaussianNB\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.model_selection import train_test_split"
@@ -305,17 +306,17 @@
       "            min_samples_leaf=1, min_samples_split=2,\n",
       "            min_weight_fraction_leaf=0.0, presort=False, random_state=None,\n",
       "            splitter='best')\n",
-      "Train Time DTC =  0.010314464569091797\n",
-      "[1 0 0 0 0 0 0 1 1 0 0 1 1 1 0 0 0 0 1 1 1 0 0 0 1 1 0 0 0 0 1 1 0 1 1 1 1\n",
-      " 1 0 1 0 0 1 1 0 1 1 0 0 1 0 1 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 1 0 1 1 0 0 0\n",
-      " 0 1 0 0 0 0 1 0 0 1 1 1 1 1 1 0 0 0 0 1 0 0 1 0 1 0 1 0 1 0 1 0 0 1 0 1 0\n",
-      " 1 0 1 0 1 1 0 0 1 0 0 0 0 0 1 1 0 1 1 1 0 0 0 1 1 0 1 1 0 0 0 0 0 0 0 0 0\n",
+      "Train Time DTC =  0.012042522430419922\n",
+      "[1 0 0 0 0 0 0 1 0 0 1 1 1 1 0 0 0 0 0 0 1 0 0 0 1 1 0 0 0 0 1 0 0 1 1 1 1\n",
+      " 1 1 1 0 0 1 1 0 1 1 0 0 1 0 1 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 1 0 1 1 0 0 0\n",
+      " 0 1 0 0 0 0 1 1 0 1 1 1 1 1 1 0 0 0 0 1 0 0 1 0 1 0 1 0 1 0 1 0 0 1 0 1 0\n",
+      " 1 0 1 1 1 1 0 0 1 0 0 0 0 0 0 1 0 1 1 1 1 0 1 1 1 0 1 1 0 0 0 0 0 0 0 0 0\n",
       " 0 1 0 1 1 0]\n",
-      "Accuracy =  0.7337662337662337\n",
-      "Precision score =  0.7429623321979564\n",
-      "Recall score =  0.7337662337662337\n",
-      "f1-score =  0.7368518625063127\n",
-      "Time DTC =  0.021689414978027344\n"
+      "Accuracy =  0.7402597402597403\n",
+      "Precision score =  0.7509157509157509\n",
+      "Recall score =  0.7402597402597403\n",
+      "f1-score =  0.743596278832675\n",
+      "Time DTC =  0.025704145431518555\n"
      ]
     }
    ],
@@ -353,7 +354,7 @@
       "  decision_function_shape='ovr', degree=3, gamma='auto', kernel='linear',\n",
       "  max_iter=-1, probability=False, random_state=None, shrinking=True,\n",
       "  tol=0.001, verbose=False)\n",
-      "Train Time SVC =  0.5498034954071045\n",
+      "Train Time SVC =  0.5826292037963867\n",
       "[0 0 0 0 0 0 0 1 1 1 0 1 0 0 0 0 0 0 1 1 0 0 1 0 1 1 0 0 0 0 1 1 1 1 1 1 1\n",
       " 0 1 1 0 1 1 0 0 1 1 0 0 1 0 1 1 0 0 0 1 0 0 1 1 0 0 0 0 1 0 1 0 1 1 0 0 0\n",
       " 0 0 0 0 0 0 1 0 0 0 0 1 1 0 0 0 0 0 0 1 1 1 0 0 1 0 1 0 1 0 1 0 0 1 0 0 0\n",
@@ -363,7 +364,7 @@
       "Precision score =  0.7532467532467533\n",
       "Recall score =  0.7532467532467533\n",
       "f1-score =  0.7532467532467533\n",
-      "Time SVC =  0.5597586631774902\n"
+      "Time SVC =  0.5909273624420166\n"
      ]
     }
    ],
@@ -379,6 +380,98 @@
     "\n",
     "metric(y_test,pre)\n",
     "print('Time SVC = ',(time()-t))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# KNeighborsClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "KNeighborsClassifier(algorithm='auto', leaf_size=30, metric='minkowski',\n",
+      "           metric_params=None, n_jobs=1, n_neighbors=12, p=2,\n",
+      "           weights='uniform')\n",
+      "Train Time KNC =  0.003478527069091797\n",
+      "[0 0 0 0 0 0 0 0 1 0 1 1 0 0 0 0 0 0 1 0 0 0 0 0 0 1 0 0 0 0 1 0 1 1 0 1 1\n",
+      " 0 0 1 0 0 1 1 0 1 0 0 0 1 0 1 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 1 0 0 0 0\n",
+      " 0 1 0 0 0 0 1 0 0 0 0 1 1 0 0 0 0 0 0 0 0 0 1 0 1 0 0 0 0 0 1 0 0 1 0 1 0\n",
+      " 1 0 1 0 0 1 0 0 0 0 0 0 0 0 1 0 1 1 1 1 0 0 1 1 0 0 1 1 0 0 0 0 1 0 0 0 0\n",
+      " 0 1 0 0 0 0]\n",
+      "Accuracy =  0.7792207792207793\n",
+      "Precision score =  0.7763559557213777\n",
+      "Recall score =  0.7792207792207793\n",
+      "f1-score =  0.7704121743036837\n",
+      "Time KNC =  0.018781661987304688\n"
+     ]
+    }
+   ],
+   "source": [
+    "t = time()\n",
+    "clf = KNeighborsClassifier(n_neighbors=12)\n",
+    "print(clf)\n",
+    "clf.fit(x_train,y_train)\n",
+    "print('Train Time KNC = ',(time()-t))\n",
+    "pre = clf.predict(x_test)\n",
+    "print(pre)\n",
+    "print('Accuracy = ',clf.score(x_test,y_test))\n",
+    "\n",
+    "metric(y_test,pre)\n",
+    "print('Time KNC = ',(time()-t))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# GaussianNB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GaussianNB(priors=None)\n",
+      "Train Time GNB =  0.0074672698974609375\n",
+      "[0 0 0 0 1 1 0 1 0 1 0 1 1 0 0 0 0 0 1 0 0 0 1 0 1 1 0 0 0 0 1 1 1 1 1 1 1\n",
+      " 0 1 0 0 0 0 1 0 1 1 0 0 1 0 1 1 0 0 0 1 0 0 1 1 0 1 1 0 1 0 1 0 1 1 0 0 0\n",
+      " 0 1 0 0 0 0 1 0 0 0 0 1 1 0 0 0 0 0 0 0 0 0 0 0 1 0 1 0 1 0 1 0 0 1 0 1 0\n",
+      " 0 0 1 0 0 1 0 0 1 0 0 0 0 0 1 0 1 1 1 1 1 0 1 1 0 0 1 1 0 0 0 0 1 0 0 0 0\n",
+      " 0 1 0 0 1 0]\n",
+      "Accuracy =  0.7662337662337663\n",
+      "Precision score =  0.7706639480056073\n",
+      "Recall score =  0.7662337662337663\n",
+      "f1-score =  0.7679249670568175\n",
+      "Time GNB =  0.020911693572998047\n"
+     ]
+    }
+   ],
+   "source": [
+    "t = time()\n",
+    "clf = GaussianNB()\n",
+    "print(clf)\n",
+    "clf.fit(x_train,y_train)\n",
+    "print('Train Time GNB = ',(time()-t))\n",
+    "pre = clf.predict(x_test)\n",
+    "print(pre)\n",
+    "print('Accuracy = ',clf.score(x_test,y_test))\n",
+    "\n",
+    "metric(y_test,pre)\n",
+    "print('Time GNB = ',(time()-t))"
    ]
   },
   {
